fix: change the eye icon color on dark mode

--- a/www/src/scss/themes/helpers/_dark-base.scss
+++ b/www/src/scss/themes/helpers/_dark-base.scss
@@ -116,7 +116,7 @@
 
   .control-item {
     .custom-checkbox {
-      input[type='checkbox']:checked+label::before {
+      input[type='checkbox']+label::before {
         filter: invert(0.7);
       }
     }
